--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -4,6 +4,7 @@
 	top: 0;
 	width: 100%;
 	height: 30px;
+	margin: 0;
 	background-color: white;
 	@include box-shadow(1px 1px 5px rgba(0, 0, 0, 0.8));
 	p {
@@ -12,6 +13,7 @@
 		font-weight: 100;
 		text-align: right;
 		padding-top: 4px;
+		margin: 0;
 	}
 	a {
 		i {
